<resources>
    <string name="app_name">Vev</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="lorem_ipsum">VEV provides you online business service to exchange products and purchase top-quality products. Sell, Buy and grow along VEV. It is a platform to market your product and reach out to potential customers. Buyers can find amazing high-quality products and that too at a considerable price. They have a vast range of registered vendors of all categories which provide customers amazing products.
Moreover, VEV provides services with the availability of calendars and locating nearby stores. VEV is a platform to accomplish e-commerce business services and get amazing services at a good price</string>
    <string name="todo">TODO</string>
    <string name="search_something">Search Something</string>
    <string name="describe_your_experiance">Describe Your Experience</string>
    <string name="addresses">Addresses</string>
    <string name="cart">Cart</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="john_doe">John Doe</string>
    <string name="no_123_sub_street_main_street">No 123, Sub Street, Main Street</string>
    <string name="city_name_province">City Name, Province</string>
    <string name="country">Country</string>
    <string name="payment_method">Payment Method</string>
    <string name="master_card_end_00">master Card end **00</string>
    <string name="items">Items</string>
    <string name="place_order">Place order</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="one_time_password">One Time Password</string>
    <string name="enter_otp_code_to_verify_this_account_send_to_your_number">Enter OTP Code To verify this account send to your number</string>
    <string name="email_otp_message">We have send OTP to your email, enter OTP code To verify this account </string>
    <string name="verify">verify</string>
    <string name="didn_t_you_receive_any_code">Didn\'t you receive any code?</string>
    <string name="re_send_code">Re-send code</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_reset_your_password">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="email_phone_number">Email / Phone Number</string>
    <string name="send_code">Send Code</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="log_in">Log In</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password</string>

    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_login_with">Or Login With</string>
    <string name="notification">Notification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="order_detail">Order Detail</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="payment_methhod">Payment Methhod:</string>
    <string name="order_list">Order List</string>
    <string name="your_order_was_placed_successfully_nfor_more_details_check_all_my_orders_npage_under_profile_tab">Your order was placed successfully.\nFor more details, check All My Orders\npage under Profile tab</string>
    <string name="my_orders">My Orders</string>
    <string name="payment_methods">Payment Methods</string>

    <string name="add_to_cart">Add To Cart</string>
    <string name="my_all_order">My All Order</string>
    <string name="settings">Settings</string>
    <string name="car_booking">Car booking</string>
    <string name="customer_support">Customer Support</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="recently_viewed">RECENTLY VIEWED</string>
    <string name="clear">Clear</string>
    <string name="available_dates">Available dates</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="legal_information">Legal Information</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="house_no">House No</string>
    <string name="street">Street</string>
    <string name="postal_code_optional">Postal code</string>
    <string name="state_province">State/Province</string>
    <string name="city">City</string>
    <string name="save_address">Save Address</string>

    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="update">Update</string>
    <string name="see_all">See All</string>
    <string name="debit_credit">"Debit / Credit Card "</string>
    <string name="cash">Cash</string>
    <string name="select_method">Select Payment Method</string>
    <string name="check_internet">Check your internet connection</string>

    <string name="complete_verification_code">Kindly enter complete verification code</string>
    <string name="code_is_send_to_your_number">Code is send to your number</string>
    <string name="please_enter_code">please enter code</string>
    <string name="oTP_verified">OTP Verified</string>
    <string name="session_expired">Session expired</string>
    <string name="give_Location_permission">Give Location permission</string>

    <string name="home">Home</string>
    <string name="review">Review</string>

    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="address_added">Address added</string>
    <string name="enter_house_address">Enter house address</string>
    <string name="enter_street_address">Enter street address</string>
    <string name="enter_postal_code">Enter postal code</string>
    <string name="enter_country">Enter country</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_keyword_search">Enter keyword search</string>
    <string name="buy">Buy</string>
    <string name="default_">default</string>
    <string name="review_added">Review added</string>
    <string name="please_add_review">Please add review</string>
    <string name="give_rating">Give rating</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="default_address_updated">Default address updated</string>
    <string name="country_code_971">Enter number with Country code (e.g +971</string>
    <string name="quantity_updated">Quantity updated</string>
    <string name="item_deleted">Item deleted</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="your_order_has_been_placed">Your order has been placed</string>
    <string name="your_appointment_has_been_fixed_kindly_check_your_email">Your appointment has been fixed kindly check your email</string>
    <string name="select_your_service">Select your service</string>
    <string name="kindly_select_appointment_date">kindly select appointment date</string>
    <string name="fill_all_the_fields">Fill all the fields</string>
    <string name="profile_Updated">Profile Updated</string>
    <string name="password_Updated">Password Updated</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="transactionId">Transaction Id</string>
    <string name="birth_date">Enter date of birth</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="select_gender">select gender</string>
    <string name="enter_name">Enter name</string>
    <string name="deleted">Deleted</string>
    <string name="please_enter_password">Please enter current password</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="character_password_8">password must pe 8 character long</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="passwrd_must_be_8_character_long">password must be 8 character long</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="invalid_number">\"Invalide email or phone number \"</string>
    <string name="enter_valid_email">Kindly enter valid email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="enter_valid_password">Kindly enter valid password</string>
    <string name="name_must_hav_5">Name must be at least 5 character</string>
    <string name="not_exceeded_to_15_character">Name should not be exceeded to 15 characters</string>
    <string name="phone_7_characters">Phone number at least of 7 character</string>
    <string name="number_not_exceeded_15">Phone Number should not be exceeded to 15 number</string>
    <string name="atleast_8_character">password must be al least 8 character long</string>
    <string name="selected">\" Selected\"</string>
    <string name="password_reset">Your Password has been reset</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="i_already_have_an_account">I already have an account. </string>
    <string name="set_new_password">Set New Password</string>
    <string name="logged_in">Logged In</string>
    <string name="please_wait">please wait...</string>
    <string name="price">\", price: \"</string>
    <string name="qty">Qty:</string>
    <string name="add_new">Add New</string>
    <string name="pay">pay</string>
    <string name="privacy_policy_description">This Privacy Policy sets out the reasons as to why and how we gather, store, transfer and disclose your personal information. This includes, information you provide us. When you register for purchasing our Services on the Site; and/or when you contact us directly by any communication channel (eg: emails), you may provide us Personal Information, such as name, email address, phone number, payment information, information you include in your communications with us, and Personal Information contained in scanned identification documents (such as an ID card, driver’s license, passport, or official company registration documents). You can choose not to provide your information, you can still browse through products and services as a guest.</string>
    <string name="guest_user">Guest User</string>
    <string name="full_category">Full category</string>
    <string name="your_purchased_under_this">Your purchased under this:</string>
    <string name="rate_us">Rate Us</string>
    <string name="post">Post</string>


</resources>