<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:weightSum="5"
android:background="@color/accent"
tools:context=".fragments.orderplace.OrderPlaceFragment">

<RelativeLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:paddingTop="20dp"
    android:layout_weight="0.5">


    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="5dp"
        android:src="@drawable/back"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp" />



</RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4.5"
     android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="100dp"
        android:elevation="1dp"
        app:cardMaxElevation="1dp"
        android:layout_gravity="center_horizontal"
        app:cardElevation="1dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_check"/>



    </androidx.cardview.widget.CardView>


    <com.google.android.material.textview.MaterialTextView
        android:text="@string/checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        style="@style/secondary_text_bold_Extralarge"/>

    <TextView
        android:id="@+id/txtdeliveryAddressHouse"
        style="@style/secondary_text_regular_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/your_order_was_placed_successfully_nfor_more_details_check_all_my_orders_npage_under_profile_tab" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btnPlaceOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center_horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:cardElevation="5dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/app_button_background"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/my_orders"
                android:textAllCaps="true"
                android:layout_weight="1"
                style="@style/white_text_bold_small"
                android:layout_marginEnd="10dp"
                android:gravity="center_horizontal|center_vertical"/>





            <ImageView
                android:id="@+id/buttonBackImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_arrow"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>












</LinearLayout>

</LinearLayout>